border is added to canvas box model

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Snake Game</title>
+	<link rel="stylesheet" href="index.css" />
 </head>
 <body>
 <canvas id="game" height="300" heght="300" ></canvas>
