Try in change of canvas size

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<link rel="stylesheet" href="index.css" />
 </head>
 <body>
-<canvas id="game" height="400" heght="400" ></canvas>
+<canvas id="game" height="500" width="500" ></canvas>
+<div class="container" id="ScoreBoard"></div>
 <script src="snake.js"></script>
 </body>
 </html>
