--- a/index.html
+++ b/index.html
@@ -2,11 +2,29 @@
 <html>
 <head>
 	<title>Snake Game</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="index.css" />
+
 </head>
 <body>
-<canvas id="game" height="500" width="500" ></canvas>
-<div class="container" id="ScoreBoard"></div>
-<script src="snake.js"></script>
+	<div class="row">
+		<div class="col-8">
+	<div class="container" id="center">
+<canvas class="container  d-flex justify-content-start" id="game" height="500" width="500" ></canvas>
+</div>
+</div>
+<div id="ScoreBoard" class="col-2">
+	<div id="level" >
+	</div>
+	<div id="score">
+	</div>
+</div>
+</div>
+<script src="snake.js">
+	
+</script>
 </body>
 </html>
