Scoreboard is added

--- a/index.html
+++ b/index.html
@@ -16,11 +16,8 @@
 <canvas class="container  d-flex justify-content-start" id="game" height="500" width="500" ></canvas>
 </div>
 </div>
-<div id="ScoreBoard" class="col-2">
-	<div id="level" >
-	</div>
-	<div id="score">
-	</div>
+<div id="ScoreBoard" class="container col-2">
+	
 </div>
 </div>
 <script src="snake.js">
